# brain_signals

./: .gitignore  ContributionSummary.docx  DimensionReduction.ipynb  Draft.docx  EDA.ipynb  EEG_Classical_ML.ipynb  Final version.docx  Liquid.ipynb  README.md  Replication.ipynb  ThesisTemplate.docx  pyproject.toml
assets/: data_statistics.tex  metric_table.tex  model_description_part1.tex  model_description_part2.tex  ols_estimation_summary.tex  ttest_table.tex
confusion/: GRU.ipynb  Linear.ipynb  Linear_with_attention_mediation.ipynb  Liquid.ipynb  Liquid_larger.ipynb
experiments/: Combined.ipynb  Combined_consequitive.ipynb  EDA.ipynb  GRUv1.ipynb  GRUv2.ipynb  GRUv4_autoencoderv0.ipynb  GRUv4_autoencoderv0_increased_lr.ipynb  GRUv4_autoencoderv1.ipynb  GRUv8.ipynb  GRUv9.ipynb  LSTMv3_increased_lr1.ipynb  Linearv1.ipynb  Linearv2_best.ipynb  Liquidv1.ipynb  Liquidv2.ipynb  Liquidv6.ipynb  Liquidv6_increased_lr1.ipynb  Liquidv7.ipynb  Liquidv8_best_increased_lr2.ipynb  Liquidv9_increased_lr1.ipynb  Liquidv9_increased_lr2.ipynb  Replication.ipynb
scripts/: .gitignore  bilstm_conv48_d2.sbatch  bilstm_conv50.sbatch  bilstm_conv50_d2.sbatch  bilstm_default.sbatch  bilstm_lag1.sbatch  check_random.py  check_random_generator.sbatch  gru_conv48_d2.sbatch  gru_conv50.sbatch  gru_conv50_d2.sbatch  gru_default.sbatch  gru_lag1.sbatch  liquid_conv48_d2.sbatch  liquid_conv50.sbatch  liquid_conv50_d2.sbatch  liquid_default.sbatch  liquid_lag1.sbatch  lstm_conv48_d2.sbatch  lstm_conv50.sbatch  lstm_conv50_d2.sbatch  lstm_default.sbatch  lstm_lag1.sbatch  main.py
(+279 files in other folders)
