[tool.poetry]
name = "brain-signals"
version = "0.1.0"
description = ""
authors = ["As17-01 <aseliverstov@nes.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
ipykernel = "^6.29.5"
numpy = "^1.24.3"
pandas = "^2.0.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.3.0"
tqdm = "^4.66.5"
loguru = "^0.7.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
black = "^24.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
